source/lib/namespaces/atuin/atuin-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      containers:
      - args:
        - server
        - start
        image: ghcr.io/atuinsh/atuin:main
        name: atuin
        ports:
        - containerPort: 8888
      - name: postgresql
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: database
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: database
        hostPath:
          path: /zssd/general/atuin-pg
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: atuin
  name: atuin
spec:
  ports:
  - name: "8888"
    port: 8888
  selector:
    app: atuin
