source/lib/namespaces/atuin/atuin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  name: atuin
  namespace: atuin
spec:
  rules:
  - host: atuin.xnauts.net
    http:
      paths:
      - backend:
          service:
            name: atuin
            port:
              number: 8888
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - atuin.xnauts.net
    secretName: atuin-tls
